[package]
name = "download_rss"
version = "0.1.0"
authors = ["MeteorGX <guixin2010@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
future_rss = "*"
tokio = {version = "*",features = [ "macros","rt-core" ] }
